Añadidas correctamente las exceptions y correciones