@@ -6,17 +6,15 @@ import com.supermercado.gestion_ventas.exceptions.ShopNotFoundException;
 import com.supermercado.gestion_ventas.models.Sale;
 import com.supermercado.gestion_ventas.models.Shop;
 import com.supermercado.gestion_ventas.repositories.ShopRepositoryInterfaz;
-import com.supermercado.gestion_ventas.response.Response;
 import com.supermercado.gestion_ventas.services.interfaces.SaleInterfaz;
 import com.supermercado.gestion_ventas.services.interfaces.ShopInterfaz;
 
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 
-import java.time.LocalDate;
-import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
+import java.util.stream.Collectors;
 
 
 @Service
@@ -34,87 +32,87 @@ public class ShopService implements ShopInterfaz {
     public List<ShopDTO> listAll() {          //listar tiendas
         List<Shop> shopList = repository.findAll();
 
-        if(shopList.isEmpty())
-        {
-            new Response("No tienes sucursales registradas",
-                    HttpStatus.NO_CONTENT.value(),
-                    LocalDate.now());
+        if (shopList.isEmpty()) {
+            System.out.println("INFO: No hay sucursales registradas.");
         }
-        return shopList.stream().map(this::convertToDTO)
-                .toList();
+        return shopList.stream()
+                .map(this::convertToDTO)
+                .collect(Collectors.toList());
     }
 
     @Override
     public ShopDTO create(ShopDTO s) {          //crear tienda
-        try{
-            Shop shopRecover = this.converToOBJ(s);
-            Shop shopSave = repository.save(shopRecover);
-
-            new Response("Se creó correctamente la sucursal",
-                    HttpStatus.ACCEPTED.value(),
-                    LocalDate.now());
-
-            return convertToDTO(shopSave);
-
-
+        try {
+            Shop shopEntity = this.convertToOBJ(s);
+            shopEntity.setSales(Collections.emptyList());
+            Shop shopSaved = repository.save(shopEntity);
+            System.out.println("INFO: Sucursal creada con ID: " + shopSaved.getId());
+            return convertToDTO(shopSaved);
         } catch (Exception e) {
-            System.err.println("Error al crear la sucursal: " + e.getMessage());
-            throw new RuntimeException("No se pudo crear la sucursal: " + e.getMessage(), e);
+            System.err.println("ERROR: Error al crear la sucursal '" + s.getName() + "'. Causa: " + e.getMessage());
+            throw new RuntimeException("Error inesperado al crear la sucursal.");
         }
 
     }
 
     @Override
-    public Response update(Long id, ShopDTO s) {             //actualizar tienda
-       Shop existingShop = repository.findById(id)
-               .orElseThrow(() -> new ShopNotFoundException("Sucursal con ID " + id + " no encontrado para actualizar"));
+    public ShopDTO update(Long id, ShopDTO s) {             //actualizar tienda
+        Shop existingShop = repository.findById(id)
+                .orElseThrow(() -> new ShopNotFoundException("Sucursal con ID " + id + " no encontrado para actualizar"));
 
-       existingShop.setName(s.getName());
-       existingShop.setCity(s.getCity());
-       existingShop.setAddress(s.getAddress());
+        existingShop.setName(s.getName());
+        existingShop.setCity(s.getCity());
+        existingShop.setAddress(s.getAddress());
 
-       Shop shopUpdate = repository.save(existingShop);
-       return new Response("Se actualizó correctamente la sucursal con ID " + id,
-               HttpStatus.ACCEPTED.value(),
-               LocalDate.now());
+        Shop shopUpdate = repository.save(existingShop);
+        System.out.println("INFO: Sucursal con ID " + shopUpdate.getId() + " actualizada.");
+        return convertToDTO(shopUpdate);
     }
 
     @Override
-    public Response delete(Long id) {   //eliminar tienda
+    public void delete(Long id) {   //eliminar tienda
 
-        if (!repository.existsById(id)){
+        if (!repository.existsById(id)) {
             throw new ShopNotFoundException("Sucursal con ID " + id + " no encontrada para eliminar.");
         }
         try {
             repository.deleteById(id);
-            return new Response("Se eliminó la sucursal " + id,
-                    HttpStatus.ACCEPTED.value(),
-                    LocalDate.now());
-        }catch (Exception e){
-            System.err.println("Error al eliminar la sucursal con ID " + id + ": " + e.getMessage());
-            throw new RuntimeException("No se pudo eliminar la sucursal con ID " + id + ": " + e.getMessage(), e);
+            System.out.println("INFO: Sucursal con ID " + id + " eliminada.");
+        } catch (Exception e) {
+            System.err.println("ERROR: Error al eliminar la sucursal con ID: " + id + ". Causa: " + e.getMessage());
+            throw new RuntimeException("Error inesperado al eliminar la sucursal.");
         }
     }
+        /// Todo: mapear objectos
+        @Override
+        public ShopDTO convertToDTO (Shop s){      //metodos para mapear OBJ a DTO
 
+            List<SaleDTO> saleDTOS = Collections.emptyList();
 
-
-    ///Todo: mapear objectos
-    @Override
-    public ShopDTO convertToDTO(Shop s)          //metodos para mapear OBJ a DTO
-    {
-        List<SaleDTO> sales = new ArrayList<>();
-
-        if (s.getSales() != null){
-            sales = s.getSales().stream().map(SI::convertToDTO).toList();
+            if (s.getSales() != null) {
+                saleDTOS = s.getSales().stream()
+                        .map(SI::convertToDTO)
+                        .collect(Collectors.toList());
+            }
+            return new ShopDTO(s.getId(), s.getName(), s.getCity(), s.getAddress(), saleDTOS);
         }
-        return new ShopDTO(s.getId(),s.getName(),s.getCity(),s.getAddress(), sales);
-    }
 
-    @Override
-    public Shop converToOBJ(ShopDTO s) {
+        @Override
+        public Shop convertToOBJ(ShopDTO s){
+            Shop shop = new Shop();
+            shop.setId(s.getId());
+            shop.setName(s.getName());
+            shop.setCity(s.getCity());
+            shop.setAddress(s.getAddress());
 
-        List<Sale> sales = s.getSales()== null || s.getSales().isEmpty() ? new ArrayList<>() : s.getSales().stream().map(SI::convertToOBJ).toList();
-        return new Shop(s.getId(),s.getName(),s.getCity(),s.getAddress(), sales);
+            if (s.getSales() != null && !s.getSales().isEmpty()) {
+                // Usamos la variable "SI" también aquí.
+                List<Sale> sales = s.getSales().stream()
+                        .map(SI::convertToOBJ)
+                        .collect(Collectors.toList());
+                shop.setSales(sales);
+            }
+            return shop;
+        }
     }
-}
 
